errorprone: Generic viam annotation checker errorprone plugin